<resources>
    <string name="app_name">Mercredi</string>
    <string name="photo_de_l_enfant">Photo de l\'enfant</string>
    <string name="action_settings">Settings</string>
    <string name="form_hint_nom">Nom</string>
    <string name="form_hint_prenom">Prénom</string>
    <string name="form_hint_rue">Rue</string>
    <string name="form_hint_code_postal">Code postal</string>
    <string name="form_hint_localite">Localité</string>
    <string name="form_hint_email">Email</string>
    <string name="form_hint_telephone">Téléphone</string>
    <string name="form_hint_telephone_bureau">Téléphone bureau</string>
    <string name="form_hint_gsm">Gsm</string>
    <string name="btn_action_save">Sauvegarder</string>
    <string name="bloc_title_list_enfant">Mes enfants</string>
    <string name="bloc_title_coordonnees">Mes coordonnées</string>
    <string name="message_no_connectivity">Connectez vous pour diposer des données à jour</string>
    <string name="form_hint_sexe">Sexe</string>
    <string name="form_hint_numero_national">Numéro national</string>
    <string name="btn_action_edit">Modifier</string>
    <string name="title_conjoint">Conjoint</string>
    <string-array name="sexes">
        <item>Féminin</item>
        <item>Masculin</item>
    </string-array>
    <string name="date">Date:</string>
    <string name="title_placeholder">Title</string>
    <string name="news_placeholder">News</string>
    <string name="sports_info_placeholder">Here is some news</string>
    <string name="subtitle_detail_text">Lorem ipsum dolor sit amet,
        consectetur adipiscing elit. Praesent ultrices congue rutrum.
        Phasellus elementum ipsum ac convallis aliquam. Suspendisse eleifend
        eros a enim faucibus mollis. Nunc placerat, est vitae vestibulum
        blandit, dolor diam fringilla tellus, eu euismod mauris neque
        at neque.
    </string>

    <string-array name="menus_titles">
        <item>Mes enfants</item>
        <item>Mes coordonnées</item>
        <item>Mes paiements</item>
    </string-array>

    <string-array name="menus_info">
        <item>Here is some Baseball news!</item>
        <item>Here is some Badminton news!</item>
        <item>Here is some Basketball news!</item>
    </string-array>
    <array name="menu_images">
        <item>@drawable/img_badminton</item>
        <item>@drawable/img_cycling</item>
        <item>@drawable/img_tennis</item>
    </array>
    <string name="formTitreEcole">Ecole</string>
    <string name="FormTitreAnneeScolaire">Année scolaire</string>
    <string name="FormTitreSexe">Sexe</string>
    <string name="btnAddPresence">Ajouter une présence</string>
    <string name="titlePresences">Présences</string>

    <plurals name="jours_selectionnees">
        <item quantity="one">%d jour sélectionné</item>
        <item quantity="other">%d jours sélectionnés</item>
    </plurals>

    <plurals name="presence_ajoutees">
        <item quantity="one">%d présence ajoutée</item>
        <item quantity="other">%d présences ajoutées</item>
    </plurals>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Mot de passe</string>
    <string name="action_sign_in">Me connecter</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>

    <string name="form_hint_remarques">Remarques</string>
    <string name="btn_action_sante_view">Sante</string>
    <string name="form_hint_question_intitule">L\'enfant est-t-il atteint de diabète</string>
    <string name="form_label_question_complent">TextView</string>
    <string name="form_hint_question_complement">Complement</string>
    <string name="btn_next">Suivant</string>
    <string name="btn_prev">Précédent</string>
    <string name="switch_non">non</string>
    <string name="switch_oui">oui</string>
    <string name="label_nom_medecin">Nom du médecin</string>
    <string name="label_telephone_medecin">Téléphone du médecin</string>
    <string name="label_personnes_urgence">Personnes en cas d\'urgence</string>
    <string name="titre_telephone_medecin">Téléphone du médecin</string>
    <string name="titre_nom_medecin">Nom du médecin</string>
    <string name="titre_personnes_urgence">Personnes en cas d\'urgence</string>
</resources>
