<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:id="@+id/conjointLabelNom"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/form_hint_nom"
                android:id="@+id/conjointNom"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:id="@+id/conjointLabelPrenom"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintTop_toBottomOf="@+id/conjointLabelNom"
            app:layout_constraintLeft_toLeftOf="@+id/conjointLabelNom">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/form_hint_prenom"
                android:id="@+id/conjointPrenom"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:id="@+id/conjointLabelEmail"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintTop_toBottomOf="@+id/conjointLabelPrenom"
            app:layout_constraintLeft_toLeftOf="@+id/conjointLabelNom">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/form_hint_email"
                android:id="@+id/conjointEmail"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:id="@+id/conjointLabelTelephone"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintTop_toBottomOf="@+id/conjointLabelEmail"
            app:layout_constraintLeft_toLeftOf="@+id/conjointLabelNom">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/form_hint_telephone"
                android:id="@+id/conjointTelephone"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:id="@+id/conjointLabelTelephoneBureau"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintTop_toBottomOf="@+id/conjointLabelTelephone"
            app:layout_constraintLeft_toLeftOf="@+id/conjointLabelNom">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/form_hint_telephone_bureau"
                android:id="@+id/conjointTelephoneBureau"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:id="@+id/conjointLabelGsm"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintTop_toBottomOf="@+id/conjointLabelTelephoneBureau"
            app:layout_constraintLeft_toLeftOf="@+id/conjointLabelNom">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/form_hint_gsm"
                android:id="@+id/conjointGsm"/>

    </com.google.android.material.textfield.TextInputLayout>


</androidx.constraintlayout.widget.ConstraintLayout>