<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="177dp"
            android:layout_height="wrap_content"
            android:id="@+id/enfantLabelNom"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/form_hint_nom"
                android:id="@+id/enfantNom"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="177dp"
            android:layout_height="wrap_content"
            android:id="@+id/enfantLabelPrenom"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/enfantLabelNom"
            android:layout_marginStart="8dp">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/form_hint_prenom"
                android:id="@+id/enfantPrenom"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Spinner
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:id="@+id/spinnerSexeView"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/enfantLabelNom"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/enfantLabelNumeroNational"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/enfantLabelNumeroNational"/>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:id="@+id/enfantLabelNumeroNational"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/enfantLabelNom"
            app:layout_constraintStart_toEndOf="@+id/spinnerSexeView"
            android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent"
    >

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/form_hint_numero_national"
                android:id="@+id/enfantNumeroNational"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
            android:text="@string/FormTitreAnneeScolaire"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:id="@+id/titleAnneeScolaire"
            app:layout_constraintTop_toBottomOf="@+id/enfantLabelNumeroNational"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/titleEcole"/>

    <TextView
            android:text="@string/formTitreEcole"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:id="@+id/titleEcole"
            tools:text="Ecole"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@+id/enfantLabelNumeroNational"
            app:layout_constraintStart_toEndOf="@+id/titleAnneeScolaire"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/titleAnneeScolaire"/>

    <Spinner
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:id="@+id/spinnerEcoleView"
            app:layout_constraintTop_toBottomOf="@+id/titleEcole"
            app:layout_constraintStart_toEndOf="@+id/spinnerAnneeScolaireView"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
    />

    <Spinner
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:id="@+id/spinnerAnneeScolaireView"
            app:layout_constraintTop_toBottomOf="@+id/titleEcole" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/spinnerEcoleView"/>


</androidx.constraintlayout.widget.ConstraintLayout>