<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/labelMedecinNomView"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/medecinNomEditTextView"
                android:hint="@string/label_nom_medecin"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/labelMedecinTelephoneView"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/labelMedecinNomView"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/medecinTelephoneditTextView"
                android:hint="@string/label_telephone_medecin"
        />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/labelPersonnesUrgencesView"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:hint="@string/label_personnes_urgence" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/labelMedecinTelephoneView">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/personnesUrgencesEditTextView"
                android:inputType="textMultiLine"
                tools:text="Papa, maman"/>
    </com.google.android.material.textfield.TextInputLayout>


</androidx.constraintlayout.widget.ConstraintLayout>