<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ImageView
            android:id="@+id/enfantPhotoView"
            android:layout_width="150dp"
            android:layout_height="200dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:src="@mipmap/ic_launcher"
            android:contentDescription="@string/photo_de_l_enfant"/>

    <TextView
            android:id="@+id/enfantNom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            tools:text="DUPONT"
            app:layout_constraintStart_toEndOf="@+id/enfantPhotoView"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="parent"/>

    <TextView
            android:id="@+id/enfantPrenom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            tools:text="Joseph"
            app:layout_constraintLeft_toLeftOf="@+id/enfantNom"
            app:layout_constraintTop_toBottomOf="@+id/enfantNom"/>

    <TextView
            android:id="@+id/enfantBirthday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="@+id/enfantNom"
            app:layout_constraintTop_toBottomOf="@+id/enfantPrenom"
            android:scrollbars="vertical"
            tools:text="Né le 01/10/1979"
            android:layout_marginTop="8dp"/>

    <TextView
            android:id="@+id/enfantNumeroNational"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="@+id/enfantNom"
            app:layout_constraintTop_toBottomOf="@+id/enfantBirthday"
            android:scrollbars="vertical"
            tools:text="Numéro national: 791011928"
            android:layout_marginTop="8dp"/>

    <TextView
            android:id="@+id/enfantEcole"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/enfantNumeroNational"
            app:layout_constraintLeft_toLeftOf="@id/enfantNom"
            tools:text="Institut Saint Martin"
            android:layout_marginTop="8dp"/>

    <TextView
            android:id="@+id/enfantAnneeScolaire"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/enfantEcole"
            app:layout_constraintLeft_toLeftOf="@id/enfantNom"
            tools:text="1er primaire"
            android:layout_marginTop="8dp"/>

    <TextView
            android:id="@+id/enfantRemarques"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/enfantAnneeScolaire"
            tools:text="@tools:sample/lorem/random"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
    />

    <Button
            android:text="@string/btnAddPresence"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnAddPresence"
            app:layout_constraintTop_toBottomOf="@+id/enfantRemarques"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>

    <TextView
            android:text="@string/titlePresences"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/titlePresencestextView"
            app:layout_constraintTop_toBottomOf="@+id/btnAddPresence"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>

    <fragment
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:name="be.marche.mercredi.enfant.fragments.EnfantListPresenceFragment"
            android:id="@+id/fragment"
            tools:layout="@layout/enfant_presences_fragment"
            app:layout_constraintTop_toBottomOf="@+id/titlePresencestextView"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>